<resources>
    <string name="app_name">비결 만세력</string>
    <string name="Manseryeok">비결 만세력</string>

    <string name="glb_search">만세력 조회</string>
    <string name="glb_close">닫기</string>
    <string name="glb_save">저장하기</string>

    <string name="glb_please_wait">잠시만 기다려주세요</string>


    <!-- Main Activity -->
    <string name="obj_calendar">만세력</string>
    <string name="obj_database">데이터베이스</string>
    <string name="obj_name">이름</string>
    <string name="obj_compass">나침반</string>
    <string name="obj_question">문의사항</string>
    <string name="obj_media">미디어</string>

    <!-- CalendarInputActivity -->
    <string name="obj_toolbar_calendar_input">만세력 정보 입력</string>
    <string name="obj_first_name">성</string>
    <string name="obj_gender">성별</string>
    <string name="obj_gender_male">남</string>
    <string name="obj_gender_female">여</string>
    <string name="obj_cal_type">양/음력</string>
    <string name="obj_cal_type_sun">양력</string>
    <string name="obj_cal_type_moon">음력</string>
    <string name="obj_cal_type_moon_leap">음력윤달</string>
    <string name="obj_input_birth">생년월일</string>
    <string name="obj_input_birth_time">태어난 시</string>
    <string name="obj_input_birth_time_unknown">모름</string>
    <string name="obj_input_birth_place">출생지</string>
    <string name="obj_cal_pillar_year_msg">" 2100년 이후의 월주는 지원하지 않습니다"</string>
    <string name="obj_cal_5">正</string>
    <string name="obj_cal_terms">大雪</string>
    <string name="obj_search_calendar">만세력 보기</string>
    <string name="obj_search_name">이름 보기</string>


    <!-- CalenderActivity -->
    <string name="obj_cal_pillar_1">식신</string>
    <string name="obj_cal_pillar_2">일원</string>
    <string name="obj_cal_pillar_3">정재</string>
    <string name="obj_cal_pillar_4">정재</string>
    <string name="obj_toolbar_calendar">만세력 결과</string>
    <string name="obj_luck">대운</string>
    <string name="obj_year_pillar">년주</string>
    <string name="obj_month_pillar">월주</string>
    <string name="msg_save_complete">저장이 완료되었습니다</string>
    <string name="msg_save_fail">저장에 실패했습니다\n해당 오류가 계속될경우 문의해주세요</string>

    <string name="obj_result_save">결과 저장하기</string>
    <string name="obj_result_share">결과 공유하기</string>


    <!-- CompassActivity -->
    <string name="obj_toolbar_map">방위 나침반</string>
    <string name="msg_permission_granted">위치 권한이 허용되었습니다</string>
    <string name="msg_permission_denied">위치 권한이 거부되었습니다\n권한이 없으면 나침반 기능을 사용할 수 없습니다</string>

    <!-- CompassHelpActivity -->
    <string name="obj_com_help_title">방향이 맞지 않으신가요?</string>
    <string name="obj_com_help_content_1">1. 주변에 다른 전자기기가 있을 경우\n기기의 방향센서에 영향을 줍니다.\n다른 전자기기와 거리를 둬 주세요.</string>
    <string name="obj_com_help_content_2">2. 기기를 하늘을 바라보게 하고,\n8자를 그리며 이동하여\n방향센서를 초기화 해주세요.</string>


    <!-- InquiryActivity -->
    <string name="obj_toolbar_question">문의사항</string>
    <string name="obj_que_content">문의 내용</string>
    <string name="send">보내기</string>
    <string name="obj_que_content_hint">궁금하신 점이나\n버그 제보 및 건의사항 등을 적어주세요</string>
    <string name="obj_que_title_hint">제목을 입력해주세요</string>
    <string name="obj_que_title">제목</string>
    <string name="glb_delete">삭제</string>
    <string name="obj_toolbar_db">데이터베이스</string>
    <string name="msg_send_inquiry_fail">문의사항 전송에 실패했습니다</string>
    <string name="msg_send_inquiry_complete">문의사항 전송에 성공하였습니다</string>

    <!-- DBActivity -->
    <string name="msg_delete_complete">삭제가 완료되었습니다</string>
    <string name="msg_delete_fail">삭제에 실패했습니다\n해당 오류가 계속될경우 문의해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="obj_location_title">지역을 선택해주세요</string>
    <string name="obj_rotation">자동 회전</string>
    <string name="obj_rotation_fix">지도 고정</string>
    <string name="obj_today">오늘의 일진</string>
    <string name="obj_toolbar_name">이름 분석 결과</string>
    <string name="obj_name_year">年 년주 기준</string>
    <string name="obj_name_month">월주 기준 月</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">비결 만세력 위젯입니다</string>


    <!-- Terms -->
    <string name="terms_location">
* 방송통신위원회의 개선권고에 따라 관련 약관에 대한 동의가 필요합니다. \n
\n
앱 내에서 입력하는 정보는 수집되지 않으며, 해당 사주를 출력하고 출생 시간을 정확히 계산하며 나침반 기능을 위한 목적으로만 사용됩니다.\n
본약관은 이용자( 비결만세력서비스 약관에 동의한 자를 말합니다. 이하"이용자"라고 합니다.)\n
비결원(이하 회사라고 합니다.)이 제공하는 비결만세력 서비스(이하 서비스라고 합니다)를 이용함에 있어 회사와 회원의 권리의무 및 책임사항을 규정함 목적으로합니다.\n
\n\n
1.목적\n
2. 서비스의 내용\n
회사가 제공하는 서비스는 아래와 같습니다.\n
서비스명: 비결만세력\n
서비스 내용: 일진보기, 사주, 대운수, 나침반 서비스 등 출력\n
사주 입력시출생지역을 선택 할 수 있는 기능을 제공 및 선택한 위치를 기준으로 출생지의 표준시를 기준으로 시간이 계산되도록 구현되며, 나침반과 유사한 기능을 제공 하고 있습니다.\n
이용자의 위치정보나 출생지 정보는 시간 계산 및 나침반을 위해서만 사용되며, 이용자의 위치정보나 출생지 정보는 일체 수집되지 않습니다.\n
\n
3.개인위치정보주체의 권리\n
\n
① 이용자는 언제든지 개인위치정보를 이용한 위치기반서비스 제공 및 개인위치정보의 제3자 제공에 대한 동의 전부 또는 일부를 철회할 수 있습니다.\n
② 이용자는 회사에 대하여 언제든지 개인위치정보의 수집, 이용 또는 제공의 중지를 요구할 수 있으며, 회사는 이를 거절할 수 없고 이를 위한 기술적 수단을 갖추고 있습니다.\n
③ 이용자는 회사에 대하여 아래 각 호의 자료에 대한 열람 또는 고지를 요구할 수 있고,당해 자료에 오류가 있는 경우에는 그 정정을 요구할 수 있습니다.\n
이 경우 회사는 정당한 사유 없이 이용자의 요구를 거절할 수 없습니다.\n
1. 본인에 대한 위치정보 수집, 이용, 제공사실 확인자료\n
2. 본인의 개인위치정보가 위치정보의 보호 및 이용 등에 관한 법률 또는 다른 법률 규정에 의하여 제3자에게 제공된 이유 및 내용\n
④ 이용자는 제1항 내지 제3항의 권리행사를 위해 회사의 소정의 절차를 통해 요구할 수 있습니다.\n
\n
4. 법정대리인의 권리\n
① 회사는 14세 미만의 회원에 대해서는 개인위치정보를 이용한 위치기반서비스 제공 및 개인위치정보의 제3자제공에 대한동의를 당해 회원과 당해 회원의 법정대리인으로부터 동의를 받아야 합니다. 이 경우 법정대리인은 제9조에 의한 회원의 권리를 모두 가집니다.\n
\n
② 회사는 14세 미만의 아동의 개인위치정보 또는 위치정보 이용, 제공사실 확인자료를 이용약관에 명시 또는 고지한 범위를 넘어 이용하거나 제3자에게 제공하고자 하는 경우에는 14세 미만의 아동과 그 법정대리인의 동의를 받아야 합니다.\n
\n
단, 아래의 경우는 제외합니다.\n
1.위치정보 및 위치기반서비스 제공에 따른 요금정산을 위하여 위치정보 이용, 제공사실 확인자료가 필요한 경우\n
2. 통계작성, 학술연구 또는 시장조사를 위하여 특정 개인을 알아볼수 없는 형태로 가공하여 제공하는 경우\n
\n
5. 회사의 연락처\n
회사의 상호 및 주소 등은 다음과 같습니다.\n
-상     호:비결원\n
-대 표 자: 안종희\n
-주     소: 충청남도 공주시 계룡면 성밑길 35-3\n
-대표전화:010-8451-6442\n
\n
6.위치정보 이용.제공 사실 확인 자료의 보유근거 및 보유기간\n
비결만세력은 이용자의 위치정보를 수집하지 않으며 보유하지 않습니다.\n
또한, 개인위치정보를 제3자에게 제공하지 않습니다.\n
</string>

    <string name="terms_privacy">
정보통신망법 규정에 따라 개인정보의 수집 및 이용목적, 개인정보의 보유 및 이용기간을 안내 드리오니 자세히 읽은 후 동의하여 주시기 바랍니다.\n
1. 개인정보의 수집, 이용 목적, 수집하는 개인정보의 항목 및 수집방법 비결만세력은 사용자의 개인정보를 일체 수집하지 않습니다.\n
앱 내부에서 입력하는 사용자의 이름, 성별 출생정보등 역시 수집하거나사용하지 않습니다.\n
2.개인정보를 제3자에게 제공하는 경우 제공받는 자의 성명, 제공받는 자의 이용목적과 제공하는 개인정보의 항목\n
비결만세력에 입력된 정보는 제3자에게 일체 제공하지 않습니다.\n
3.개인정보의 보유 및 이용 기간, 개인정보의 파기절차 및 파기방법\n
이용자가 입력한 개인정보는 이용자의 스마트폰에 저장되고, 이용자만이 파기할 수 있습니다.\n
회사는 이용자가 입력, 저장한 정보에 접근할 수 없습니다.\n
4. 개인정보 취급위탁을 하는 업무의 내용 및 수탁자 비결만세력은 이용자의 개인정보를 제3자에게 위탁하지 않습니다.\n
5. 이용자 및 법정대리인의 권리와 그 행사방법 개인정보 수집에 관한 의문사항은 관리책임자에게 연락하시면조치하겠습니다.\n
6. 인터넷 접속정보파일 등 개인정보를 자동으로 수집하는 장치의 설치.운영 및 그 거부에 관한 사항 비결만세력은 개인정보를 자동으로 수집하는 장치가 설치되어있지않습니다.\n
7. 개인정보 관리책임자의 성명 또는 개인정보보호 업무 및 관련 고충사항을 처리하는 부서의 명칭과그 전화번호 등 연락처\n
소    속:비결원\n
이 메 일: kulholab@gmail.com\n
    </string>

    <string name="business_info">
        상호: 비결원\n
        대표자: 안종희\n
        주소: 충청남도 공주시 계룡면 성밑길 35-3\n
        전화번호: 010-7935-4243\n
    </string>
    <string name="obj_que_email">이메일 (선택)</string>
    <string name="obj_que_phone">전화번호 (선택)</string>
    <string name="obj_que_email_hint">이메일을 입력해주세요</string>
    <string name="obj_que_phone_hint">전화번호를 입력해주세요</string>
    <string name="title_activity_compose_test">ComposeTestActivity</string>

</resources>