<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page.QuestionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp"
        app:title="@string/obj_toolbar_question" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/gap_horizontal"
        android:paddingVertical="@dimen/gap_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gap_line"
            android:text="@string/obj_que_title"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_que_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_box"
            android:gravity="top"
            android:hint="@string/obj_que_title_hint"
            android:maxLength="3"
            android:padding="@dimen/gap_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_vertical"
            android:layout_marginBottom="@dimen/gap_line"
            android:text="@string/obj_que_content"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_que_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_box"
            android:gravity="top"
            android:hint="@string/obj_que_content_hint"
            android:padding="@dimen/gap_line" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_que_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_full_height"
        android:background="@drawable/btn_navy"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/send" />


</LinearLayout>