<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".page.CalendarInputActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_calendar_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp"
        app:title="@string/obj_toolbar_calendar_input" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                style="@style/styleInputText"
                android:layout_width="@dimen/input_text_width"
                android:layout_height="wrap_content"
                android:text="@string/obj_first_name" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/styleInputText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/obj_name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_horizontal"
            android:orientation="horizontal">

            <TextView
                style="@style/styleInputText"
                android:layout_width="@dimen/input_text_width"
                android:layout_height="match_parent"
                android:text="@string/obj_gender" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_height"
                android:layout_gravity="center_vertical"
                android:background="@drawable/radio_group_background"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_gender_male"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_height"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_background"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/obj_gender_male"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rb_gender_female"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_height"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/obj_gender_female"
                    android:textColor="@drawable/radio_text" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/styleInputText"
                android:layout_width="@dimen/input_text_width"
                android:layout_height="match_parent"
                android:text="@string/obj_cal_type" />

            <RadioGroup
                android:id="@+id/rg_cal_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_height"
                android:layout_gravity="center_vertical"
                android:background="@drawable/radio_group_background"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_cal_type_sun"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_height"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_background"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/obj_cal_type_sun"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rb_cal_type_moon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_height"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/obj_cal_type_moon"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rb_cal_type_moon_leap"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_height"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/obj_cal_type_moon_leap"
                    android:textColor="@drawable/radio_text" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/styleInputText"
                android:layout_width="@dimen/input_text_width"
                android:layout_height="wrap_content"
                android:text="@string/obj_input_birth" />

            <EditText
                android:id="@+id/et_input_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/styleInputText"
                android:layout_width="@dimen/input_text_width"
                android:layout_height="wrap_content"
                android:text="@string/obj_input_birth_time" />

            <EditText
                android:id="@+id/et_input_birth_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/cb_input_birth_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:buttonTint="@color/green"
                android:text="@string/obj_input_birth_time_unknown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/styleInputText"
                android:layout_width="@dimen/input_text_width"
                android:layout_height="wrap_content"
                android:text="@string/obj_input_birth_place" />


            <EditText
                android:id="@+id/et_input_birth_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="대한민국 (-30분)"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calender_input_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_full_height"
        android:background="@drawable/btn_navy"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/glb_search" />
</LinearLayout>